dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)

dnl Setup for automake
SDL_VERSION=1.2.7

dnl Detect the canonical host and target build environment
AC_CANONICAL_SYSTEM

dnl Setup for automake
AM_INIT_AUTOMAKE(SDL_tests, $SDL_VERSION)

dnl Check for tools

AC_PROG_CC

dnl Check for compiler environment

AC_C_CONST

AM_CONDITIONAL(TARGET_PSP, test $ARCH = psp)
dnl Check for a valid PSPSDK installation
CheckPSPSDK()
{
    AC_CHECK_PROG(psp_config, psp-config, psp-config, no)
    if test x$psp_config = xno; then
        AC_MSG_ERROR(Couldn't locate psp-config.)
    fi

    AC_MSG_CHECKING(for PSPSDK)
    pspsdk_path=`$psp_config --pspsdk-path`
    if test ! -d $pspsdk_path -o -z $pspsdk_path; then
        AC_MSG_RESULT(not found)
        AC_MSG_ERROR(Couldn't locate PSPSDK.)
    fi
    AC_MSG_RESULT($pspsdk_path)

    # Compile SDL with -G0 to disable the $gp register.
    CFLAGS="$CFLAGS -G0 -I\"${pspsdk_path}/include\""
    SYSTEM_LIBS="$SYSTEM_LIBS -lpspgu -lpspaudio -lpsplibc -lpspuser -lpspkernel"
    BUILD_PREFIX="psp-"
}

dnl Figure out which math library to use
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
        MATHLIB=""
        SYS_GL_LIBS="-lopengl32"
        ;;
    *-*-beos*)
        MATHLIB=""
        SYS_GL_LIBS="-lGL"
        ;;
    *-*-darwin* )
        MATHLIB=""
        SYS_GL_LIBS=""
        ;;
    *-*-aix*)
        if test x$ac_cv_prog_gcc = xyes; then
            CFLAGS="-mthreads"
        fi
        SYS_GL_LIBS=""
        ;;
    *-*-mint*)
        MATHLIB=""
        AC_PATH_PROG(OSMESA_CONFIG, osmesa-config, no)
        if test "x$OSMESA_CONFIG" = "xyes"; then
            OSMESA_CFLAGS=`$OSMESA_CONFIG --cflags`
            OSMESA_LIBS=`$OSMESA_CONFIG --libs`
            CFLAGS="$CFLAGS $OSMESA_CFLAGS"
            SYS_GL_LIBS="$OSMESA_LIBS"
        else
            SYS_GL_LIBS="-lOSMesa"
        fi
		;;
    *-psp-*)
        ARCH=psp
        CheckPSPSDK
        # Set up files for the video library
        if test x$enable_video = xyes; then
            VIDEO_SUBDIRS="$VIDEO_SUBDIRS psp"
            VIDEO_DRIVERS="$VIDEO_DRIVERS psp/libvideo_psp.la"
        fi
        # Set up files for the audio library
        if test x$enable_audio = xyes; then
            AUDIO_SUBDIRS="$AUDIO_SUBDIRS psp"
            AUDIO_DRIVERS="$AUDIO_DRIVERS psp/libaudio_psp.la"
        fi
        # Set up files for the joystick library
        if test x$enable_joystick = xyes; then
            JOYSTICK_SUBDIRS="$JOYSTICK_SUBDIRS psp"
            JOYSTICK_DRIVERS="$JOYSTICK_DRIVERS psp/libjoystick_psp.la"
        fi
        # Set up files for the cdrom library
        if test x$enable_cdrom = xyes; then
            CDROM_SUBDIRS="$CDROM_SUBDIRS dummy"
            CDROM_DRIVERS="$CDROM_DRIVERS dummy/libcdrom_dummy.la"
        fi

        CFLAGS="$CFLAGS -DENABLE_PSP -DDISABLE_STDIO"
        ;;
    *)
        MATHLIB="-lm"
        AC_PATH_X
        AC_PATH_XTRA
        if test x$have_x = xyes; then
            CFLAGS="$CFLAGS $X_CFLAGS"
            SYS_GL_LIBS="$X_LIBS -lGL"
        else
            SYS_GL_LIBS="-lGL"
        fi
        ;;
esac
AC_SUBST(MATHLIB)

dnl Check for SDL

AM_PATH_SDL($SDL_VERSION,
            :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

dnl Check for OpenGL
AC_MSG_CHECKING(for OpenGL support)
have_opengl=no
AC_TRY_COMPILE([
 #include "SDL_opengl.h"
],[
],[
have_opengl=yes
])
AC_MSG_RESULT($have_opengl)
if test x$have_opengl = xyes; then
    CFLAGS="$CFLAGS -DHAVE_OPENGL"
    GL_LIBS="$SYS_GL_LIBS"
else
    GL_LIBS=""
fi
AC_SUBST(GL_LIBS)

# Finally create all the generated files
AC_OUTPUT([Makefile])
