SUBDIRS = \
	atrac3 \
	audio \
	base \
	ctrl \
	debug \
	display \
	fpu \
	ge \
	gu \
	gum \
	hprm \
	kernel \
	libc \
	mpeg \
	nand \
	net \
	openpsid \
	power \
	prof \
	registry \
	rtc \
	sircs \
	sdk \
	startup \
	umd \
	usb \
	usbstor \
	user \
	utility \
	vfpu \
	video \
	vsh \
	wlan \
	samples
