
bin_PROGRAMS = bin2s bin2c bin2o pack-pbp unpack-pbp mksfo psp-config psp-build-exports psp-prxgen

bin2s_SOURCES = bin2s.c
bin2c_SOURCES = bin2c.c
bin2o_SOURCES = bin2o.c

pack_pbp_SOURCES = pack-pbp.c
unpack_pbp_SOURCES = unpack-pbp.c

mksfo_SOURCES = mksfo.c

psp_config_SOURCES = psp-config.c getopt.c getopt1.c

psp_build_exports_SOURCES = psp-build-exports.c getopt.c getopt1.c sha1.c

psp_prxgen_SOURCES = psp-prxgen.c getopt.c getopt1.c
